--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
 * {
     padding: 0;
     margin: 0;
@@ -12,9 +17,10 @@
     --fonte3: 'Sriracha', cursive;
 }
 
-body {
+html , body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -27,7 +33,7 @@ header > h1 {
     padding-top: 50px;
     font-family: var(--fonte2);
     font-variant: small-caps;
-    font-size: 90px;
+    font-size: 10vw; /*10% da largura da tela, isso é recurso para adaptação de tela em outros aparelhos*/
 }
 
 header > p {
@@ -57,11 +63,12 @@ section {
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--fonte3);
-    font-size: 40px;
+    font-size: 3.5vw; /*3.5% do width da fiew port(tela)*/
 }
 
 section.imagem {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgb(51, 51, 51);
     color: white;
     box-shadow: inset 6px 6px 13px 0px rgb(0, 0, 0,0.473);
