--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -59,26 +59,26 @@ section.normal {
 
 section {
     padding-top: 10vh; /*10% da altura da tela*/
-    padding-bottom: 10vh;
+    padding-bottom: 8vh;
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--fonte3);
-    font-size: 3.5vw; /*3.5% do width da fiew port(tela)*/
+    font-size: 2.5vw; /*2.5% do width da fiew port(tela)*/
 }
 
 section.imagem {
-    display: inline-block;
-    padding: 5px;
     background-color: rgb(51, 51, 51);
     color: white;
-    box-shadow: inset 6px 6px 13px 0px rgb(0, 0, 0,0.473);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);
     background-size: cover;
     background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgb(0, 0, 0,0.253);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0px black;
 }
 
 section#img01 {
