--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -3,5 +3,6 @@
 /*APARELHO EM PÉ (PORTRAIT)*/
 
 body{
-    background: url(../imagens/cev-portrait.jpg)
+    background: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
 }
